--- a/doc/user_centered_design.tex
+++ b/doc/user_centered_design.tex
@@ -42,10 +42,10 @@
 
 % first the title is needed
 
-\title{User Centerd Design\\Analyse\\ Prototyping\\ Evaluation}
+\title{Interaktives Onlinemuseum\\Analyse\\ Prototyping\\ Evaluation}
 
 % a short form should be given in case it is too long for the running head
-\titlerunning{User Centered Design}
+\titlerunning{Interaktives Onlinemuseum}
 
 % the name(s) of the author(s) follow(s) next
 %
@@ -54,10 +54,15 @@
 % the running heads and the author index.
 %
 
-\author{xxxx, xxxxxx, xxxxx, Elsa Buchholz}
+\author{
+		Adrian Franken (Matr.nr.:s),\\
+		Chris-Andr\'{e} Posselt (Matr.nr.:s),\\
+		Elsa Buchholz (Matr.nr.:s0544180),\\ 
+		Igor Olegovich Turanin (Matr.nr.:s)
+	   }
 
 %
-\authorrunning{User Centered Design}
+\authorrunning{Interaktives Onlinemuseum}
 % (feature abused for this document to repeat the title also on left hand pages)
 
 % the affiliations are given next; don't give your e-mail address
@@ -65,8 +70,6 @@
 %\institute{Hochschule für Technik und Wirtschaft Berlin\\}
 \institute{
 		Hoschschule für Technik und Wirtschaft Berlin\\
-		Email: s0544180@htw-berlin.de\\
-		Matr.nr.: 544180
 }
 \affil{	
 		Fachbereich: Informatik, Kommunikation und Wirtschaft\\
