--- a/doc/user_centered_design.tex
+++ b/doc/user_centered_design.tex
@@ -57,7 +57,7 @@
 %
 
 \author{
-		Adrian Franken (Matr.nr.:s),\\
+		Adrian Franken (Matr.nr.:s0538115),\\
 		Chris-Andr\'{e} Posselt (Matr.nr.:s),\\
 		Elsa Buchholz (Matr.nr.:s0544180),\\ 
 		Igor Olegovich Turanin (Matr.nr.:s)
