added anforderungsanalyse, ziele, funktionen, anforderungen

--- a/doc/user_centered_design.tex
+++ b/doc/user_centered_design.tex
@@ -117,12 +117,39 @@
 
 \section{Einleitung}
 \section{Anforderungsanalyse}
-\subsection{Anwendungsfälle und Nutzungskontext}
+\subsection{Anwendungsfälle und Nutzungskontext} \label{sect:anwendung}
 Laut Miedler 2010 ist ein Museum eine Einrichtung, die zu Bildungs- und Forschungszwecken Zeugnisse von Umwelt und Menschen, der Öffentlichkeit zur Verfügung stellt und aufbewahrt. Die Zeugnisse von Umwelt und Menschen können sehr vielfältig sein. Dabei kann es sich um Bauarten wie Schlösser und Burgen handeln, als auch um Kunstobjekte aus der Malerei oder Fotografie sowie naturwissenschaftliche oder technische Erzeugnisse. Somit lassen sich Museen in verschiedene Arten einteilen, wie beispielsweise in Burg- und Schlossmuseum, Kunstmuseum, technisches oder naturkundliches Museum. Nicht nur der Bildungs- und Forschungszweck eines Museums soll erfüllt werden, sondern das Erleben der Zeugnisse soll innerhalb einer Ausstellung erreicht werden. Ausstellungen können dabei dauerhaft oder wechselnd kuratiert werden, wobei sie je nach Art des Museums an einem bestimmten Ort gebunden sind. Aufgrund der Vielzahl von Museumsarten und dem Zweck des Bildungs- und Forschungsauftrages bzw. Erlebnisses, besitzen Museen eine weitgefasste Zielgruppe. Daraus ergeben sich Interessengruppen, die sich aus der jeweiligen Art des Museums oder aus verschiedenen Berufsgruppen wie beispielsweise Lehrer, Schüler, Studenten oder Mitarbeiter des Museums wie Kuratoren oder Archivare  ergeben\cite[S. 29]{Miedler.2010}.\\ 
+
+In der folgenden Tabelle werden die Stakeholder des Systems zusammengefasst. Sie beschreibt welches Interesse und welchen Einfluss die Stakeholder auf das System haben.\\
+
+\begin{table}
+	\begin{tabular}{|c|c|c|}\hline
+	Stakeholder & Interesse & Einfluss\\ \hline
+	\multirow{2}*{aktive Museumsgänger} & neue Möglichkeiten &\\  & zur Erkundung der Exponate ermöglichen & sehr hoch \\ \hline
+	
+	nicht aktive Museumsgänger & Interesse am Museumsbesuch wecken  & hoch\\ \hline
+	
+	\multirow{2}*{Archivar des Museums}& Erfassung der Exponate &\\ & innerhalb einer Datenbank & sehr gering\\ \hline
+	
+	\multirow{2}*{Kurator des Museums} & Integration von Technologien&\\& innerhalb einer Ausstellung & hoch\\ \hline
+	pädagogische Kräfte  & Lehreiche Informationen erhalten& sehr hoch\\ \hline
+	Kinder  & spielerischer Umgang mit den Exponaten & sehr hoch\\ \hline
+	\end{tabular}
+\end{table}
+
+Daraus ergeben sich folgende Ziele:
+\begin{itemize}
+	\item Aktive Museumsgänger sollen weiterhin motiviert werden in das Museum zu gehen und durch neue Technologien mit den Exponaten interagieren können. Die Interaktion soll dem Kenner des Museums ermöglichen, neue Informationen bzw. einen neuen Zugang zu diesen zu gewinnen.
+	\item Nicht aktive Museumsgänger sollen durch neue Technologien einen Zugang zum Museum erhalten, wobei das Interesse für die Exponate geweckt werden soll.
+	\item Mitarbeiter des Museums sollen von den Technologien profitieren, indem sie Exponate besser Verwalten können bzw. die Ausstellung mit einem höheren Gehalt an Interaktionen konzipieren können.
+	\item Pädagogische Kräfte sollen Wissen mit Hilfe des Museums verständlicher vermitteln können.
+	\item Kinder sollen spielerisch Lernen können und mit Freude das Museum als Lernraum entdecken.\\
+	
+\end{itemize}
 
 Das virtuelle Museum kann die Grenzen des Ortsbezuges aufheben. Beispielsweise kann ein virtuelles Museum über das Internet erreichbar sein, sodass die Ausstellungsstücke unabhängig von einem bestimmten Ort zugänglich sind. Aufgrund des Standes der Technik ist es möglich das Erleben der Ausstellungstücke durch das Interagieren und Herstellen von Zusammenhängen im virtuellen Raum greifbar zu machen. Durch das Bereitstellen von Informationen im virtuellen Raum auf individuelle Art und Weise kann vor allem dem Bildungsanspruch entsprochen werden und somit im besonderen der Zielgruppe Lehrer und Schüler entsprochen werden. Mitarbeiter eines Museums wie beispielsweise Kuratoren oder Archivare könnten vom virtuellen Museum profitieren innerhalb einer dreidimensionalen Datenbank als Überblick zur Verwaltung und zum Austausch von Ausstellungsstücken oder beim virtuellen zusammenstellen von Ausstellungen. Im folgenden Abschnitt zeigt der Stand der Technik weiterführende Möglichkeiten wie ein virtuelles Museum verstanden werden kann.\\
 
-\subsection{Stand der Technik} \label{standtechnik}
+\subsection{Stand der Technik} \label{sect:standtechnik}
 
 Eine Kategorie wie ein virtuelles Museum verstanden werden kann, ist das Online-Museum. Darunter können Museen fallen, die im Internet virtuell, begehbar und interaktiv nutzbar sind. Ein Beispiel dafür ist das Google Art Projekt \cite{GoogleCultureInstitut.2011}. Es ermöglicht Ausstellungshäuser weltweit zu erkunden. Auf dieser Seite können sich Nutzer durch die Bestände der Museen klicken und eigene Galerien anlegen, sowie virtuelle Rundgänge durch die Museen machen. Ziel eines Online-Museums ist es die Nutzer in das entsprechende Museum zu locken.\\ 
 
@@ -153,14 +180,14 @@ Grundsätzlich wird ein Museum auf Reisen bzw. im Urlaub besucht ohne Vor- oder 
 
 Nach der Diskussion wurde das Video Museum in a Box gezeigt, indem die Organisation ihr Konzept vom Museum in der Box darstellt. Das Video dient als Überleitung zu virtuellen Museen als eine neue Form der Museen mit veränderten Möglichkeiten zur Interaktion mit Ausstellungsstücken. Im folgenden wurde der Frage nachgegangen wie sie sich ein virtuelles Museum vorstellen und wie darin mit Ausstellungsstücken interagiert werden kann.\\
 
-In Form einer Diskussion haben die Teilnehmer die Kategorien eines virtuellen Museum aus dem Abschnitt \nameref{standtechnik} herausgearbeitet und bewertet. Die Tabelle fasst die Ergebnisse dieser Diskussion zusammen.\\
+In Form einer Diskussion haben die Teilnehmer die Kategorien eines virtuellen Museum aus dem Abschnitt \nameref{sect:standtechnik} herausgearbeitet und bewertet. Die Tabelle fasst die Ergebnisse dieser Diskussion zusammen.\\
 
 \begin{table}
 \begin{tabular}{|c|c|}\hline
-	Kategorie							& Beurteilung	\\ 
+	Kategorie							& Beurteilung\\ 
 										\hline
 	\multirow{2}*{Online-Museum}		& negativ bewertet,\\
-						  				& da viel verloren geht aus dem Museum\\ \hline
+						  				& da viel verloren geht aus dem Museum \\  \hline 
 	\multirow{5}*{Virtual Reality}		& innerhalb eines Museums negativ, weil man\\
 	                                    & das zu Haus machen kann\\
 	                      				& Technik selber als positiv bewertet, weil\\
@@ -182,9 +209,69 @@ In Form einer Diskussion haben die Teilnehmer die Kategorien eines virtuellen Mu
 \caption{Bewertung der Kategorien eines virtuellen Museums als Interaktionsmöglichkeiten}
 \end{table}
 
-Während der Diskussion sind viele Ideen entstanden, wie die Techniken verwendet werden können. Dabei stand vor allem die spielerische Auseinandersetzung mit den Ausstellungsstücken eine Rolle. Dabei entstanden Ideen wie beispielsweise das eigene Zusammenstellen und ausdrucken einer eigenen Ausstellung, das Nachstellen und Erleben von Unmöglichen Situationen wie der Reise zu Mond oder 1000 Meter unter dem Meer oder das spielerische nachzeichnen der Mona Lisa sowie das Umschmeißen im Duell mit Freunden einer Ming-Vase.\\
+Während der Diskussion sind viele Ideen entstanden, wie die Technologien verwendet werden können. Dabei stand vor allem die spielerische Auseinandersetzung mit den Ausstellungsstücken eine Rolle. Es entstanden Ideen wie beispielsweise das eigene Zusammenstellen und ausdrucken einer eigenen Ausstellung, das Nachstellen und Erleben von Unmöglichen Situationen wie der Reise zu Mond oder 1000 Meter unter dem Meer oder das spielerische nachzeichnen der Mona Lisa, sowie das Umschmeißen im Duell mit Freunden einer Ming-Vase.\\
 
-Auswertung/ Fazit
+Zusammenfassend ergeben sich aus den definierten Zielen aus dem Kapitel \nameref{sect:anwendung} und folgenden Zitaten die Funktionen zur Entwicklung des Systems. 
+Die beiden Zitate \glqq Webseiten sind doof, da geht viel zu viel verloren vom Museum.\grqq und \glqq Homepage auf gar keinen Fall! Eine Online-Galerie ist doof und es geht viel verloren.\grqq haben uns zu der Entscheidung gebracht, das System nicht als Webseite umzusetzen. Die ursprüngliche Idee ein interaktives Onlinemuseum in Form einer Webseite mit 3D-Objekten zu entwickeln, wird zu Gunsten der Idee interaktiv in einem Museum zu handeln verworfen. Die Diskussion ergab, dass Interaktionen in einem virtuellen Museum weniger über Webseiten zu realisieren sind, als über Technologien wie AR, VR oder 3D-Druck. Das Zitat
+\glqq Die Situation erlebbar zu machen ist wichtig in einem virtuellen Museum. Orte wo man nicht hin kann.\grqq 
+%Begriff virtuelles Museum gewählt um offener über Anforderungen sprechen zu können. Interaktion hauptaugenmerk.
+zeigt den Wunsch VR-Technologien für ein virtuelles Museum anzuwenden, indem interaktiv agiert werden kann. Wohingegen die Zitate
+\glqq Spannend ist es, wenn es zusätzlich zum Museum angeboten wird.\grqq \glqq Nebeninformationen sind super!\grqq den Wunsch nach AR-Technologie äußern. 
+Daraus lassen sich für die Entwicklung des Systems die in der Tabelle aufgeführten Funktionen und Anforderungen ableiten.
+
+\begin{table}
+\begin{tabular}{|c|c|}\hline
+	Funktion									& 	Anforderung\\ \hline
+	
+\multirow{7}*{Präsentation von Informationen}	& Das System muss dem Nutzer \\
+												& die Möglichkeit bieten\\
+ 												& Informationen zum Exponat\\
+												& 1. anzuzeigen\\ 
+												& 2. zu sortieren\\
+												& 3. zu filtern\\
+												& 4. zu vertiefen.\\\hline
+											
+\multirow{7}*{Interaktion mit Exponaten} 		& Das System soll dem Nutzer\\
+												& die Möglichkeit bieten\\
+												& das Exponat\\
+												& 1. zu erkunden\\
+												& 2. zu gestalten\\
+												& 3. in einen Kontext zu setzten\\
+												& 4. spielerisch zu erfassen.\\ \hline
+
+\multirow{4}*{Individualisierung}				& Das System soll dem Nutzer\\
+												& die Möglichkeit bieten\\
+												& 1. eigenen Interessen zu folgen\\
+												& 2. eigene Ausstellungen zu gestalten\\ \hline
+												
+\multirow{3}*{Lerneigenschaft}					& Das System soll dem Nutzer\\
+												& die Möglichkeit bieten\\
+												& etwas über die Exponate zu lernen.\\ \hline
+												
+\multirow{4}*{Erreichbarkeit von Orten}			& Das System soll dem Nutzer\\
+												& die Möglichkeit bieten\\
+												& 1. andere Welten zu erkunden\\
+												& 2. an unerreichbare Orte zu gelangen.\\ \hline
+												
+\multirow{4}*{Spielcharakter}					& Das System soll dem Nutzer\\
+												& die Möglichkeit bieten\\
+												& 1. 3D-Objekte von den Exponaten zu sammeln\\
+												& 2. ein gemeinsames Erlebnis mit Freunden zu bieten.\\ \hline							
+\end{tabular}
+\end{table}
+
+
+%Das System muss Fähig sein das Exponat zu repräsentieren.
+
+%Das System muss Fähig sein mit dem Nutzer zu agieren.
+
+%Das System soll Fähig sein dem Nutzer Wissen zu vermitteln.
+
+%Das System muss eine motivierende Wirkung auf die Nutzer für die Exponate ausüben.
+
+%Das System soll spielerisch angewandt werden.
+
+Im nächsten Abschnitt wird beschrieben, wie die gewonnen Erkenntnisse über die Anforderungen eines virtuellen Museums in Form eines Papierprototypen umgesetzt werden.\\
 
 \section{Prototyping: low fidelity}
 \subsection{Papierprototyp}
