--- a/doc/user_centered_design.tex
+++ b/doc/user_centered_design.tex
@@ -31,6 +31,9 @@
 \usepackage[hidelinks]{hyperref}
 \usepackage{multirow}
 
+\usepackage{graphicx}
+\graphicspath{ {./img/} }
+
 \usepackage{url}
 %\urldef{\mailsa}\path|{alfred.hofmann, ursula.barth, ingrid.haas, frank.holzwarth,|
 %\urldef{\mailsb}\path|anna.kramer, leonie.kunz, christine.reiss, nicole.sator,|
@@ -274,9 +277,67 @@ Daraus lassen sich für die Entwicklung des Systems die in der Tabelle aufgefüh
 Im nächsten Abschnitt wird beschrieben, wie die gewonnen Erkenntnisse über die Anforderungen eines virtuellen Museums in Form eines Papierprototypen umgesetzt werden.\\
 
 \section{Prototyping: low fidelity}
-\subsection{Papierprototyp}
-\subsection{Designentscheidung}
-\subsection{heuristische Analyse}
+Für die Entwicklung des Papierprototypen wurde zur Umsetzung das Naturkunde Museum als Referenz gewählt. Weiterhin wurde die Darstellung der Objekte bzw. Exponate als 3D-Objekte umgesetzt.
+Allen Prototypen gemeinsam ist, dass aufgrund der Ergebnisse der Fokusgruppe die Prototypen als AR Anwendung umgesetzt wurden.\\
+
+Eine gute Gebrauchstauglichkeit ist gegeben, wenn mit dem System die Ziele erreicht werden können. Mit Hilfe der heuristischen Evaluation soll die Gebrauchstauglichkeit anhand der Heuristiken von Nielson ermittelt werden.\\
+ 
+\subsection{Papierprototypen und deren Designentscheidung}
+In der ersten Variante wurde eine mobile Applikation entwickelt, die über die Kamera des mobilen Gerätes mit dem Exponat interagiert. Mit Hilfe der Kamera kann das Exponat auf dem mobilen Gerät angesehen werden. Dabei werden zusätzlich auf dem Bildschirm  Informationen zu dem Exponat angezeigt. Nach dem Gesetz der Dailoggestaltung zur Selbstbeschreibungsfähigkeit soll der Nutzer durch die offene Kamera erkennen, das er das Objekt zu dem er Informationen haben möchte scannen muss. Ebenfalls die Steuerbarkeit ist hier gegeben, da der Nutzer mit der Kamera die volle Kontrolle über das Objekt besitzt. Die Informationen zu dem Objekt sind an dem Objekt fest verankert, sodass sie beim Zoomen mit vergrößert werden und eine Zugehörigkeit zwischen Obkjekt und Information besteht.\\
+
+Zur Umsetzung des Papierprototypen wurde beispielhaft der Archaeopteryx als Exponat gewählt. Mit der Applikation sollen folgende Szenarien möglich sein, die in dem Use-Case-Diagramm dargestellt sind.\\
+
+\includegraphics[scale=0.2]{use_c_museum}
+
+Der Papierprototyp wurde für den Use Case Informationen anzeigen entwickelt, das den Use Case Exponat zoomen inkludiert. Die Gestaltung und Anzahl der Dialoge wurde bewusst minimal gehalten, um die Konzentration auf die Informationen lenken zu können. Die Interaktionen sollten aus den Informationen selbst erkennbar sein und durch bekannte Interaktionen umsetzbar sein. Als bekannte Interaktion ist das Zoomen mit Hilfe von zwei Fingern, die auseinander bzw. zusammen gezogen werden möglich. Ebenfalls als bekannt vorausgesetzt, ist das Zurücksetzten der Skalierung über das doppelte Tippen auf das Display. Nach dem Öffnen der Applikation öffnet sich die Kamera. Der Nutzer soll im weiteren Schritt die Kamera auf das Exponat richten, sodass Informationen angezeigt werden können. Sobald das Exponat von der Kamera erfasst wurde, werden zu diesem Exponat allgemeine Informationen angezeigt, durch die gescrollt werden können durch das Wischen nach Oben bzw. Unten. Am Ende können über einen Button spezielle Informationen, wie die Merkmale des Archeopteryx angezeigt werden.
+Für das Anzeigen von weiteren Informationen wird eine Slideshow umgesetzt. Die Benutzung der Slideshow erfolgt durch das Wischen nach Links und Rechts, wobei die Überschriften das Vorwissen des Nutzers anregen sollen, dass weitere Informationen durch das Wischen angezeigt werden können. Die Slideshow wurde nach den Grundsätzen der Dialoggestaltung nach der Erwartungskonformität gewählt. Eine Slideshow dient zur Navigation, mit der sich mehrere Informationen zu einem Hintergrundbild anzeigen lassen können.\\
+%TODO
+%Bilder hinzufügen und darauf beziehen und Vorlesungsinhalte; evtl. use case Leinwand bearbeiten beschreiben
+
+%Nach den Grundsätzen der Dialoggestaltung
+%Erwartungskonformität: Slideshow zur Navigation zu weiteren Informationen. Anzeige Punkte, die farblich hervorgehoben werden als Ankerpunkt. Wischen für weitere Informationen andere Ansicht. Scrollen Anzeige Scrollbar rechts. 
+
+%Steuerbarkeit: Nutzer hat die Kontrolle, durch Kamera. Objekt immer sichtbar. Informationen sind fest an Objekt verankert. Auch bei Zoomfunktion.
+
+%Selbstbeschreibungsfähig: App öffnet sich Kamera ist sofort an. Erklärt sich selbst, das auf Objekt gehalten werden muss, da Kamera an ist.
+
+%Gesetz der Kontinuität:
+
+%Gesetz der Verbundenheit:
+
+%Gesetz der Einfachheit:
+
+\subsection{Heuristische Evaluation}
+Die heuristische Evaluation wurde an der mobilen Applikation zum Anzeigen von Informationen und der Applikation zum Anzeigen von Exponaten als 3D-Objekt mit Hilfe eines Tangible Interface vollzogen. Um Usability Probleme zu entdecken, wurden die Heuristiken von Nielson verwendet. Damit lassen sich Eigenschaften des Systems herausfinden, die erfüllt sein müssen, damit die Interaktion für den Nutzer gebrauchstauglich sind.
+In Tabelle xy werden die Ergebnisse der heuristischen Analyse der mobilen Applikation zusammengefasst.\\
+
+\begin{table}
+	\begin{tabular}{|c|c|c|c|}\hline
+		Dialog 				& Erwartung					& Lösungsvorschlag& Heuristik\\\hline
+		
+		Allg. Information	&  	\multirow{5}*{automatisches Scrollen} 	& Scrollbar einfügen\\
+																	 	& zur Erkennung der \\
+																		 &Interaktionsmöglichkeit\\
+																		 &Umsetzen einer\\
+																		&automatischen Wiedergabe\\ & Sichtbarkeit des Systemstatus\\\hline
+		Zoomen & \multirow{3}*{Zoomen durch herangehen} & Info anzeigen\\
+														& wie das Zoomen\\
+														& funktioniert\\ & Übereinstimmung zwischen dem System und der realen Welt\\\hline
+		Wischen & \multirow{5}*{Wischen nicht erkannt} 	& Einfügen von \\
+														& Punkten zur Anzeige\\
+														& von Anzahl der Slides\\ Benutzerkontrolle, Hilfe und Dokumentation\\\hline					
+	\end{tabular}
+\end{table}
+
+Die Erwartung, das die allgemeinen Informationen automatisches gescrollt werden, beruht darauf, dass das System keine Rückmeldung über den Status zurückgegeben hat. Durch Einfügen einer Scrollbar wird dem Nutzer angezeigt, dass der Text nach unten hin bewegbar ist. Über die Größe des Rechtecks in der Scrollbar wird die aktuelle Position im Text angezeigt und ein Gefühl für die Länge des Textes gegeben.\\
+
+Das System spricht nicht die Sprache des Nutzers beim Verwenden des Zoommechanismus. Durch die Verwendung der AR-Technologie hat der Nutzer das Gefühl, dass die Interaktion mit dem Objekt genauso funktioniert wie im reelen Leben. Dadurch wird erwartet, dass durch herangehen an das Exponat ein Zoomen möglich ist. Durch hinzufügen einer Informationshilfe wie das Zoomen anzuwenden ist, könnte der Nutzer die Interaktion lernen. Allerdings würde das der Heuristik von Nielson wiedersprechen, dass das System ohne Hilfe auskommen muss.\\
+
+Das nicht erkennen der Funktion Wischen zum Anzeigen von weiteren Informationen lässt den Nutzer in eine Situation geraten aus die er nicht wieder zurück findet. Das wurde anhand der Heuristik Benutzerkontrolle festgestellt. Um die Funktion deutlich zu machen, am unteren Rand kleine Kreise dargestellt, die für jeweils eine Seite stehen. Die Kreise werden zusammen nebeneinander in gleichmäßigen Abstand dargestellt, wobei der Kreis farbig dargestellt wird, der die Seite repräsentiert, die gerade angezeigt wird. Durch Wischen wird die nächste Seite angezeigt und der entsprechende Kreis farbig dargestellt. Eine direkte Auswahl der Seite, die angezeigt werden soll, kann durch das Tippen auf den Kreis vollzogen werden.\\
+
+\subsection{Fazit}
+%fazit bezüglich der im digitalen Prototypen umzusetztenden Features
+
 
 \section{Prototyping: high fidelity}
 \subsection{Umsetzung des Papierprototypen}
