add matrikelnummer Igor

--- a/doc/user_centered_design.tex
+++ b/doc/user_centered_design.tex
@@ -63,7 +63,7 @@
 		Adrian Franken (Matr.nr.:s0538115),\\
 		Chris-Andr\'{e} Posselt (Matr.nr.:s),\\
 		Elsa Buchholz (Matr.nr.:s0544180),\\ 
-		Igor Olegovich Turanin (Matr.nr.:s)
+		Igor Olegovich Turanin (Matr.nr.:s0549350)
 	   }
 
 %
