fazit added first draft

--- a/doc/user_centered_design.tex
+++ b/doc/user_centered_design.tex
@@ -375,7 +375,21 @@ Das nicht erkennen der Funktion Wischen zum Anzeigen von weiteren Informationen 
 
 \subsection{Fazit}
 %fazit bezüglich der im digitalen Prototypen umzusetztenden Features
+Nach der Durchführung der heuristischen Evaluation, entstand die Idee, die Funktionen  der mobilen AR Anwendung wie Zoomen, Scrollen, Drehen und Informationen anzeigen eines Objektes auf das Tangible Interface anzuwenden. Somit soll eine Anwendung zum Interagieren mit einem Exponat über ein Tangible Interface entstehen. Die Anwendung soll in zwei Modi verwendet werden können, die über einen Knopf gewechselt werden können. Im ersten Modus kann das Exponat angesehen, gedreht und vergrößert werden, im zweiten Modus können sich Informationen zu dem Exponat angezeigt werden lassen. Folgende Feature werden dafür umgesetzt:
 
+\begin{itemize}
+	\item Die Anwendung wird gestartet, wenn das Tangible Interface aus der Halterung am Terminal genommen wird.
+	\item Beim Starten der Anwendung wird der Modus zum Interagieren geöffnet.
+	\item Als Nutzer möchte ich das Exponat vergrößern, durch  Drücken des Tangible Interfaces. Dabei soll je nach Kraftaufwand eine entsprechende Skalierung stattfinden. 
+	\item Als Nutzer möchte ich das Exponat drehen können, durch vertikales und horizontales Drehen des Tangible Interfaces.
+	\item Als Nutzer möchte ich Informationen zu einem Exponat angezeigt bekommen, wenn ich den Informations-Knopf am Tangible Interface drücke.
+	\item Als Nutzer möchte ich den Informationstext scrollen, durch vertikales Drehen des Tangible Interfaces.
+	\item Als Nutzer möchte ich weitere Informationen anzeigen, durch horizontales Drehen des Tangible Interfaces.
+	\item Als Nutzer möchte ich die angezeigten Informationen zu einem Exponat durch Drücken des Informations-Knopfes am Tangible Interface ausblenden.
+	\item Die Anwendung wird durch Zurücklegen des Tangible Interfaces in das Terminal beendet.
+	Wenn die Anwendung beendet wird, wird das Exponat ohne Zoom und Informationen angezeigt in einem voreingestellten Skalierungsmodus.
+	
+\end{itemize}
 
 \section{Prototyping: high fidelity}
 \subsection{Umsetzung des Papierprototypen}
